Added language declaration to masterpage

--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head runat="server">
     <title>StunningSnaps</title>
     <link href="Styles/MainStyle.min.css" rel="stylesheet" />
